cc_library(
	name = "simple-example-lib",
	srcs = ["SimpleExample.cpp"],
	deps = [
		"//src/base",
	],
)

cc_binary(
	name = "SimpleExample",
	deps = [
		":simple-example-lib",
		"//:pc",
	],
)

cc_library(
	name = "image-example-lib",
	srcs = [
		"ImageExample.cpp",
		"stb_image.h",
	],
	deps = [
		"//src/base",
	],
	defines = select({
		# goes back 5: examples + 4 more paths
		"@bazel_tools//src/conditions:windows": ["BAZEL_DATA_PATH=../../../../../examples/"],
		"//conditions:default": [],
	}),
)

cc_binary(
	name = "ImageExample",
	deps = [
		":image-example-lib",
		"//:pc",
	],
	data = [
		"hearts.png",
	],
)
